# ProjMan

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  locustfile.py  pyproject.toml  requirements.txt  test_main.http
.github/workflows/: ci-cd.yml
aws_lambda/: lambda_function.py
src/: main.py
src/api/: auth.py  deps.py  documents.py  projects.py  schemas.py
src/core/: config.py  security.py
src/db/: connection.py
src/services/: s3.py
tests/: test_api.py
